; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/binutils/binutils/extr_srconv.c_find_base.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/binutils/binutils/extr_srconv.c_find_base.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.coff_sfile = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }
%struct.coff_section = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.coff_sfile*, %struct.coff_section*)* @find_base to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @find_base(%struct.coff_sfile* %0, %struct.coff_section* %1) #0 {
  %3 = alloca %struct.coff_sfile*, align 8
  %4 = alloca %struct.coff_section*, align 8
  store %struct.coff_sfile* %0, %struct.coff_sfile** %3, align 8
  store %struct.coff_section* %1, %struct.coff_section** %4, align 8
  %5 = load %struct.coff_sfile*, %struct.coff_sfile** %3, align 8
  %6 = getelementptr inbounds %struct.coff_sfile, %struct.coff_sfile* %5, i32 0, i32 0
  %7 = load %struct.TYPE_2__*, %struct.TYPE_2__** %6, align 8
  %8 = load %struct.coff_section*, %struct.coff_section** %4, align 8
  %9 = getelementptr inbounds %struct.coff_section, %struct.coff_section* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i64 %10
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  ret i32 %13
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
